#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2cmy     rgb2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2cmyk     rgb2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2gray     rgb2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2hsi     rgb2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2hsl     rgb2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2hsv     rgb2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2hwb     rgb2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2lab     rgb2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2lab_CIE     rgb2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2lab_Hunter     rgb2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2LabCH     rgb2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2lms     rgb2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2lms_BFD     rgb2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2lms_K65     rgb2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2lms_KE     rgb2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2lms_MCAT02     rgb2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2luv     rgb2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2LuvCH     rgb2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2rgb     rgb2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2xyy     rgb2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2xyz     rgb2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2YCgCo     rgb2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2YDbDr     rgb2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2yiq     rgb2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2YPbPr     rgb2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2YPbPr2020     rgb2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2YPbPr601     rgb2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2YPbPr709     rgb2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2yuv     rgb2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2yuv601     rgb2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__rgb__rgb2yuv709     rgb2yuv709.cpp )
