#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2cmy      xyy2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2cmyk      xyy2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2gray      xyy2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2hsi      xyy2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2hsl      xyy2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2hsv      xyy2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2hwb      xyy2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2lab      xyy2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2lab_CIE      xyy2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2lab_Hunter      xyy2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2LabCH      xyy2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2lms      xyy2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2lms_BFD      xyy2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2lms_K65      xyy2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2lms_KE      xyy2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2lms_MCAT02      xyy2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2luv      xyy2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2LuvCH      xyy2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2rgb      xyy2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2xyy      xyy2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2xyz      xyy2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2YCgCo      xyy2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2YDbDr      xyy2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2yiq      xyy2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2YPbPr      xyy2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2YPbPr2020      xyy2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2YPbPr601      xyy2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2YPbPr709      xyy2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2yuv      xyy2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2yuv601      xyy2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__xyy__xyy2yuv709      xyy2yuv709.cpp )
